# cpp-training

./: CMakeLists.txt  ReadMe.md
include/: ConcurrentQueue.h  Producer.h  Task.h  ThreadPool.h  mutexQueue.h
include/tasks/: SleepTask.h  cpuTask.h  mixedTask
src/: Task.cpp  ThreadPool.cpp  main.cpp  producer.cpp
